--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "$(npm bin)/browserify -t [ babelify --presets [ es2015 ] ] index.js > build/eyevinn-html-player.js",
+    "prebuild": "if [ -d ./build ] ; then rm -rf ./build ; fi && mkdir ./build",
+    "build-css": "cat css/*.css > ./build/eyevinn-html-player.css",
+    "build-icons": "rm -rf ./build/svg && mkdir ./build/svg && cp icons/* build/svg",
+    "build": "npm run build-css && npm run build-icons && $(npm bin)/browserify -t [ babelify --presets [ es2015 ] ] index.js > ./build/eyevinn-html-player.js",
     "start": "python -m SimpleHTTPServer 3000"
   },
   "author": "Jonas Birmé <jonas.birme@eyevinn.se>",
