--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Eyevinn HTML5 Player with support for HLS and MPEG-DASH",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "$(npm bin)/jasmine",
     "prebuild": "if [ -d ./build ] ; then rm -rf ./build ; fi && mkdir ./build",
     "build-css": "cat css/*.css > ./build/eyevinn-html-player.css",
     "build-icons": "rm -rf ./build/svg && mkdir ./build/svg && cp icons/* build/svg",
@@ -22,6 +22,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "browserify": "^16.1.1"
+    "browserify": "^16.1.1",
+    "jasmine": "^3.1.0"
   }
 }
