Do not include node_modules on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ dist: trusty
 language: node_js
 node_js:
   - '6'
+script: npm run build
+before_deploy: rm -rf node_modules
 deploy:
   on:
     tags: true
