--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eyevinn-html-player",
   "version": "0.1.4",
-  "description": "Eyevinn HTML5 Player with support for HLS and MPEG-DASH",
+  "description": "Eyevinn HTML5 Player with support for HLS, MPEG-DASH and MSS",
   "main": "index.js",
   "scripts": {
     "test": "$(npm bin)/jasmine",
