new build system for css as well

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "$(npm bin)/jasmine",
-    "build": "parcel build index.js --no-source-maps --out-dir build --out-file eyevinn-html-player.js",
+    "build-js": "parcel build index.js --no-source-maps --out-dir build --out-file eyevinn-html-player.js",
+    "build-css": "parcel build styles/main.scss --no-source-maps --out-dir build --out-file eyevinn-html-player.css",
+    "build": "npm run build-js && npm run build-css",
     "start": "parcel ./demo/index.html",
     "postversion": "git push && git push --tags"
   },
