--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "shaka-player": "^2.5.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@types/jest": "^24.0.23",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
