--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-css": "parcel build styles/main.scss --no-source-maps --out-dir build --out-file eyevinn-html-player.css",
     "build": "npm run build-js && npm run build-css",
     "start": "parcel ./demo/index.html",
+    "test": "jest --passWithNoTests",
     "postversion": "git push && git push --tags"
   },
   "author": "Jonas Birmé <jonas.birme@eyevinn.se>",
@@ -29,6 +30,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "dotenv-vars": "^2.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^23.1.1",
