--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
 
     - name: Upload bundle to S3
       run: |
-        aws s3 cp ./build/* s3://origin-player-releases/${{ steps.get_version.outputs.VERSION }}/build/ --recursive
+        aws s3 cp ./build/ s3://origin-player-releases/${{ steps.get_version.outputs.VERSION }}/build/ --recursive
