--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eyevinn-html-player",
+  "name": "@eyevinn/html-player",
   "version": "0.4.2",
   "description": "Eyevinn HTML5 Player with support for HLS, MPEG-DASH and MSS",
   "main": "index.js",
