--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ public/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 dist/
+pkg/
 build/
 .cache/
 .vscode/
